--- a/login.html
+++ b/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class="en">
 <head>
 <meta charset="utf-8" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=517"></script>
-<script src="javascripts/purl.js?v=517"></script>
-<script src="javascripts/config.js?v=517"></script>
+<script src="javascripts/nn-sdk.js?v=548"></script>
+<script src="javascripts/purl.js?v=548"></script>
+<script src="javascripts/config.js?v=548"></script>
 <title>9x9.tv - Login</title>
 </head>
 <body>
